--- a/iapython.ipynb
+++ b/iapython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQiIWAV/uukF/uow+M4Ewg",
+      "authorship_tag": "ABX9TyPsy3B6e6gk2u9LdIjnViXE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,7 @@
       "metadata": {
         "id": "NBK6KF4Q2x2m",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        },
-        "outputId": "453a5e9d-0f7e-4570-eb2a-ca6634097e83"
+        "colab": {}
       },
       "source": [
         "import pandas as pd  #bibioteca responsável para o tratamento e limpeza dos dados\n",
@@ -42,17 +38,8 @@
         "from matplotlib import pyplot as plt  #plotar os gráficos\n",
         "import seaborn as sns #plot de gráficos"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 38,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -64,7 +51,7 @@
       "source": [
         "df_consultas=pd.read_csv('datasets_diabetes.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -76,12 +63,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "65226e36-b4a5-4569-94fc-67646cdb3484"
+        "outputId": "d38565eb-af3c-4504-8ee1-bd76b0886d3c"
       },
       "source": [
         "df_consultas.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +182,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 40
         }
       ]
     },
@@ -210,7 +197,7 @@
         "entradas = ['Pregnancies','Glucose','BloodPressure','SkinThickness','Insulin','BMI','DiabetesPedigreeFunction','Age']\n",
         "saida=['Outcome']"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -224,7 +211,7 @@
         "x=df_consultas[entradas]\n",
         "y=df_consultas[saida]"
       ],
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -239,7 +226,7 @@
         "normaliza = MinMaxScaler() \n",
         "entradas_normalizadas=normaliza.fit_transform(x)"
       ],
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -253,7 +240,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(entradas_normalizadas, y, test_size=0.3, random_state=42) "
       ],
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -265,12 +252,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9ab350cf-ac3e-4011-ee94-b604d3191571"
+        "outputId": "12b549ee-a155-4d30-91ff-b3df7578c11d"
       },
       "source": [
         "x_train.shape"
       ],
-      "execution_count": 15,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +269,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 21
         }
       ]
     },
@@ -295,7 +282,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "c7c8f72c-e71d-49bb-df11-894e5538dc67"
+        "outputId": "d4077769-3df2-4dfe-e69b-3ec3cd2f5630"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -309,7 +296,7 @@
         "\n",
         "print(classification_report(y_test,y_pred_KNN))"
       ],
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +332,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d1d8f3a6-3163-4364-a988-06b4850f5633"
+        "outputId": "9908348d-83e6-4b62-9040-f893b2999044"
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
@@ -356,16 +343,198 @@
         "acuracia = accuracy_score(y_test, y_previsto)\n",
         "print('Acurácia da àrvore de Decisão: ',acuracia)"
       ],
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Acurácia da àrvore de Decisão:  0.696969696969697\n"
+            "Acurácia da àrvore de Decisão:  0.7142857142857143\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ESOuBjkBUZli",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "outputId": "ad9b6536-341b-480a-daba-05b8ad262ae8"
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn import metrics\n",
+        "\n",
+        "clf_floresta = RandomForestClassifier(max_depth=10, random_state=1)\n",
+        "clf_floresta.fit(x_train,y_train)\n",
+        "y_pred=clf_floresta.predict(x_test)\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.7445887445887446\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+            "  \"\"\"\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MftwYW-ktnnV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "outputId": "f197cea3-ae09-41a8-caf0-843d66c2eb71"
+      },
+      "source": [
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "clf_svm=SVC(gamma='auto',random_state=1)\n",
+        "clf_svm.fit(x_train,y_train)\n",
+        "y_pred=clf_svm.predict(x_test)\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.7705627705627706\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hCQZrtYZuWJ1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "outputId": "7c762937-93b6-48d0-89a9-d074669f70ac"
+      },
+      "source": [
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "clf_mlp = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5,\n",
+        "5), random_state=1)\n",
+        "\n",
+        "clf_mlp.fit(x_train,y_train)\n",
+        "\n",
+        "y_pred=clf_mlp.predict(x_test)\n",
+        "\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.7316017316017316\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:934: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qu26TVrRvWlF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3d1900c5-79e8-4acc-ddf8-1ab87a285e01"
+      },
+      "source": [
+        "import threading\n",
+        "import time\n",
+        "from random import randint\n",
+        "def funcao_1(num):\n",
+        "  n=num\n",
+        "  while n>0:\n",
+        "    n-=1\n",
+        "    print (\"n_1 : {} \".format(n))\n",
+        "    time.sleep (randint (0,2))\n",
+        "\n",
+        "def funcao_2(num):\n",
+        "  n = num\n",
+        "  while n<50:\n",
+        "    n+=1\n",
+        "    print (\"n_2 : {} \".format(n))\n",
+        "    time.sleep(randint(0,2))\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    t1 = threading.Thread (target =funcao_1 , args = (0,))\n",
+        "    t2 = threading.Thread (target =funcao_2 , args = (100,))\n",
+        "    t1.start()\n",
+        "    t2.start()\n",
+        "    t1.join()\n",
+        "    t2.join()\n",
+        "    print ( \" Fim ! \" )"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " Fim ! \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jr6ySl9fUvgI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
