--- a/desafioModulo4.ipynb
+++ b/desafioModulo4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJQzFjCxWcICHK58u+f/SN",
+      "authorship_tag": "ABX9TyOUOg9lhpH/QOLNm/f8navs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "75d4fd18-6cf9-4e76-9a21-35de3bbf1be1"
+        "outputId": "95e7f39b-c4d6-4e4e-e878-c1bf05c68230"
       },
       "source": [
         "import pandas as pd  #bibioteca responsável para o tratamento e limpeza dos dados\n",
@@ -76,7 +76,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "666c4a4e-4801-4590-8629-8364b5bbd107"
+        "outputId": "d3cec7f2-8d5a-42fc-c717-28bcf99e0720"
       },
       "source": [
         "df_doencas_coracao.head()"
@@ -232,12 +232,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
-        "outputId": "26b01bd4-a99c-4bb2-e5c1-e3ca8df70b97"
+        "outputId": "e52aa427-ca58-4b47-8797-f0e2eeabb841"
       },
       "source": [
         "df_doencas_coracao.info()"
       ],
-      "execution_count": 4,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "85f3d0a2-319f-4743-c572-fbd2ed977d0c"
+        "outputId": "fc70d719-2372-446e-d95a-cf6d5efd4a26"
       },
       "source": [
         "cond = df_doencas_coracao[df_doencas_coracao['age'] > 0]\n",
@@ -284,7 +284,7 @@
         "media = cond['age'].mean()\n",
         "print(media)"
       ],
-      "execution_count": 21,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,14 +304,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "d05ccdcf-6cda-459f-a5f1-562e8d42d197"
+        "outputId": "9370f8cb-144f-4f64-8833-cd4ea4006bcc"
       },
       "source": [
         "cond = df_doencas_coracao[df_doencas_coracao['sex'] == 0]\n",
         "cond = cond[cond['DEATH_EVENT'] == 0]\n",
         "print(cond['sex'].count)"
       ],
-      "execution_count": 24,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,10 +341,70 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "entradas = ['sex','age','diabetes','anaemia','high_blood_pressure','creatinine_phosphokinase','smoking','ejection_fraction','platelets','serum_creatinine', 'serum_sodium']\n",
+        "saida=['DEATH_EVENT']\n",
+        "x=df_doencas_coracao[entradas]\n",
+        "y=df_doencas_coracao[saida]\n",
+        "normaliza = MinMaxScaler()\n",
+        "entradas_normalizadas=normaliza.fit_transform(x)\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z8-Qn3AtBKOO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        },
+        "outputId": "6cad5908-956d-4b68-e06f-d9ca44972e79"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(entradas_normalizadas, y, test_size=0.3, random_state=42)\n",
+        "\n",
+        "clf_KNN = KNeighborsClassifier(n_neighbors=5)\n",
+        "\n",
+        "clf_KNN.fit(x_train, y_train)\n",
+        "\n",
+        "y_pred_KNN = clf_KNN.predict(x_test)\n",
+        "\n",
+        "print(classification_report(y_test,y_pred_KNN))\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.59      0.94      0.72        53\n",
+            "           1       0.40      0.05      0.10        37\n",
+            "\n",
+            "    accuracy                           0.58        90\n",
+            "   macro avg       0.49      0.50      0.41        90\n",
+            "weighted avg       0.51      0.58      0.47        90\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:9: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  if __name__ == '__main__':\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     }
   ]
 }
