--- a/desafioModulo4.ipynb
+++ b/desafioModulo4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUOg9lhpH/QOLNm/f8navs",
+      "authorship_tag": "ABX9TyMazuAnllHBn6MhngZRRtMv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,7 @@
       "metadata": {
         "id": "9PtjBA3P5nKh",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        },
-        "outputId": "95e7f39b-c4d6-4e4e-e878-c1bf05c68230"
+        "colab": {}
       },
       "source": [
         "import pandas as pd  #bibioteca responsável para o tratamento e limpeza dos dados\n",
@@ -42,17 +38,8 @@
         "from matplotlib import pyplot as plt  #plotar os gráficos\n",
         "import seaborn as sns #plot de gráficos"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -64,7 +51,7 @@
       "source": [
         "df_doencas_coracao=pd.read_csv('doencas_coracao.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -81,7 +68,7 @@
       "source": [
         "df_doencas_coracao.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +224,7 @@
       "source": [
         "df_doencas_coracao.info()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +271,7 @@
         "media = cond['age'].mean()\n",
         "print(media)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +298,7 @@
         "cond = cond[cond['DEATH_EVENT'] == 0]\n",
         "print(cond['sex'].count)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +329,7 @@
       },
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\n",
-        "entradas = ['sex','age','diabetes','anaemia','high_blood_pressure','creatinine_phosphokinase','smoking','ejection_fraction','platelets','serum_creatinine', 'serum_sodium']\n",
+        "entradas = ['sex','age','diabetes','anaemia','high_blood_pressure','creatinine_phosphokinase','smoking','ejection_fraction','platelets','serum_creatinine', 'serum_sodium', 'time']\n",
         "saida=['DEATH_EVENT']\n",
         "x=df_doencas_coracao[entradas]\n",
         "y=df_doencas_coracao[saida]\n",
@@ -362,7 +349,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "6cad5908-956d-4b68-e06f-d9ca44972e79"
+        "outputId": "8fe9dd88-4b16-4933-e49b-058466846a9c"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -379,19 +366,19 @@
         "\n",
         "print(classification_report(y_test,y_pred_KNN))\n"
       ],
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.59      0.94      0.72        53\n",
-            "           1       0.40      0.05      0.10        37\n",
+            "           0       0.61      0.96      0.74        53\n",
+            "           1       0.67      0.11      0.19        37\n",
             "\n",
-            "    accuracy                           0.58        90\n",
-            "   macro avg       0.49      0.50      0.41        90\n",
-            "weighted avg       0.51      0.58      0.47        90\n",
+            "    accuracy                           0.61        90\n",
+            "   macro avg       0.64      0.54      0.47        90\n",
+            "weighted avg       0.63      0.61      0.51        90\n",
             "\n"
           ],
           "name": "stdout"
@@ -401,6 +388,88 @@
           "text": [
             "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:9: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
             "  if __name__ == '__main__':\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "19-eyn1QtNre",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f8ca37cc-9a69-4cfb-eacf-d99e76f5e9ff"
+      },
+      "source": [
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "\n",
+        "clf_arvore = DecisionTreeClassifier(random_state=1)\n",
+        "clf_arvore.fit(x_train, y_train) \n",
+        "y_previsto = clf_arvore.predict(x_test) \n",
+        "acuracia = accuracy_score(y_test, y_previsto)\n",
+        "print('Acurácia da àrvore de Decisão: ',acuracia)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Acurácia da àrvore de Decisão:  0.6666666666666666\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lClOnOxpuHXS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "outputId": "a04af647-b288-4129-f52d-5baf2b641e88"
+      },
+      "source": [
+        "from sklearn.neural_network import MLPClassifier\n",
+        "from sklearn import metrics\n",
+        "\n",
+        "clf_mlp = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5,\n",
+        "5), random_state=1)\n",
+        "\n",
+        "clf_mlp.fit(x_train,y_train)\n",
+        "\n",
+        "y_pred=clf_mlp.predict(x_test)\n",
+        "\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.7111111111111111\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:934: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:470: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
           ],
           "name": "stderr"
         }
